# computer-vision

./: CMakeLists.txt  README.md
cvl-scripts/: demo3.cvl  erodedblend.cvl  erosion.cvl  sobel-test.cvl  videmo1.cvl
src/: Blur.cpp  Canny.cpp  Chapter3Exercises.cpp  EnhanceContrast.cpp  ExecutableCommand.h  FaceDetection.cpp  Filter3.cpp  HoleCounting.cpp  Interactive.cpp  InteractiveVideo.cpp  JpegStudy.cpp  Sharpen.cpp  ToGrayScale.cpp  findconnected.cpp
